Added a SetFPS function and made a basic pong gmae

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,14 +11,15 @@ target_include_directories(GameFramework PRIVATE
         "C:/CLibrarys/SDL/SDL2/x86_64-w64-mingw32/include/SDL2"
         "C:/CLibrarys/SDL/SDL2_image/x86_64-w64-mingw32/include/SDL2"
         "C:/CLibrarys/SDL/SDL2_mixer/x86_64-w64-mingw32/include/SDL2"
-        "${SOURCE_DIR}"
-        "${SOURCE_DIR}/include"
+        "C:/CLibrarys/SDL/SDL2_ttf/x86_64-w64-mingw32/include/SDL2"
         "include"
+        "${SOURCE_DIR}"
 )
 target_link_directories(GameFramework PRIVATE
         "C:/CLibrarys/SDL/SDL2/x86_64-w64-mingw32/lib"
         "C:/CLibrarys/SDL/SDL2_Image/x86_64-w64-mingw32/lib"
         "C:/CLibrarys/SDL/SDL2_mixer/x86_64-w64-mingw32/lib"
+        "C:/CLibrarys/SDL/SDL2_ttf/x86_64-w64-mingw32/lib"
 )
 
 target_link_libraries(GameFramework PRIVATE
@@ -27,5 +28,6 @@ target_link_libraries(GameFramework PRIVATE
         SDL2
         SDL2_image
         SDL2_mixer
+        SDL2_ttf
 )
 
